testing another way to load data from the api

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hayat-plakater-frontend",
   "version": "1.0.0",
   "private": true,
+  "license": "UNLICENSED",
+  "engines": {
+    "node": "14.16.1"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
