--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@nuxtjs/strapi": "^0.3.1",
+    "@stripe/stripe-js": "^1.15.0",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
+    "stripe": "^8.148.0",
     "swiper": "^6.6.1",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-stripe-elements-plus": "^1.0.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
