--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint": "npm run lint:js"
   },
   "dependencies": {
     "@nuxtjs/strapi": "^0.3.1",
@@ -21,7 +23,16 @@
     "vue-stripe-elements-plus": "^1.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.9.0",
     "fibers": "^5.0.0",
+    "prettier": "^2.3.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1"
   }
