changed the linter to use existing eslint & prettier

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,6 +49,10 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v3
         env:
+          LINTER_RULES_PATH: /
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
+          JAVASCRIPT_DEFAULT_STYLE: prettier
+          VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
