--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "hayat-plakater-frontend",
+  "description": "Frontend for hayatplakater.dk",
   "version": "1.0.0",
   "private": true,
   "license": "UNLICENSED",
+  "homepage": "https://hayatplakater.dk/",
+  "contributors": [
+    "Mads Hougesen <mads@mhouge.dk> (https://mhouge.dk)",
+    "Abdulaziz Al Otaibi (https://assao.dk/)"
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "prettier": "npx prettier --write .",
+    "fix-shit": "npm run prettier && npm run lint"
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
